tampilan profil akun

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html> 
-<html> 
-    <head> 
-        <link rel="stylesheet" href="style.css">
+<html lang="en"> 
+<head> 
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-o32P/VCa8X8deWLO/MQ8Z9flKJpFu9i+oK40lFt7u1Tt/9EYsvvDnD7pM3H91Q6vWiwkdsAFCzGCP6L3ZJ9jg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-<div id="profile-container">
-<img id="profile-image" src="gambar.JPG" alt="profile image" /> 
-<h2 id="profile-name">ahmad alfath</h2>
-</div>
+    <div id="profile-container">
+        <img id="profile-image" src="gambar.JPG" alt="profile image" /> 
+        <h2 id="profile-name">Ahmad Alfath</h2>
+        <p id="profile-description">Web Developer</p>
+        <div id="social-icons">
+            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
+        </div>
+    </div>
 </body>
 </html>
